macros/tests/compile-fail/unsupported_ref_str.rs
use gluesql_macros::FromGlueRow;

#[derive(FromGlueRow)]
struct S<'a> {
    v: &'a str,
}
